Add /messages/feed and /messages /feed-json endpoints.
